--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -3,50 +3,73 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    app:cardCornerRadius="3dp"
-    app:cardElevation="3dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="4dp"
     app:cardUseCompatPadding="true"
-    >
+    android:animateLayoutChanges="true">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
+    android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:orientation="horizontal"
+        android:padding="6dp">
         <ImageView
             android:id="@+id/imagen_music"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_launcher_background">
-            
-        </ImageView>
-      <TextView
-          android:id="@+id/titulo"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Musica"
-          android:textSize="20sp"
-          android:textStyle="bold"
-          android:layout_toRightOf="@id/imagen_music"
-          android:layout_toEndOf="@id/imagen_music"
-          android:layout_marginLeft="10dp"
-          android:layout_marginStart="10dp"
-          >
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="false"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
+            android:src="@drawable/ic_launcher_background"
+            />
 
-      </TextView>
+        <LinearLayout
+            android:id="@+id/linealayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="2dp"
+            android:layout_toEndOf="@+id/imagen_music"
+            android:orientation="vertical"
+            android:layout_marginLeft="4dp"
+            android:layout_toRightOf="@id/imagen_music">
+        <TextView
+            android:id="@+id/titulo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_toEndOf="@id/imagen_music"
+            android:layout_toRightOf="@id/imagen_music"
+            android:text="Musica"
+            android:textSize="20sp"
+            android:textStyle="bold">
+
+        </TextView>
+
         <TextView
             android:id="@+id/descripcion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="descripcion"
-            android:layout_toRightOf="@id/imagen_music"
             android:layout_below="@id/titulo"
-            android:layout_toEndOf="@id/imagen_music"
-            android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            >
+            android:layout_marginLeft="10dp"
+            android:layout_toEndOf="@id/imagen_music"
+            android:layout_toRightOf="@id/imagen_music"
+            android:text="descripcion">
 
         </TextView>
+</LinearLayout>
     </RelativeLayout>
-
+</LinearLayout>
 </androidx.cardview.widget.CardView>
